# shaderToyKnockoff

./: CMakeLists.txt  README.md
.cache/clangd/index/: _fixes.hpp.9EF63C0ADE262950.idx  _vectorize.hpp.E1F9348080B99CC3.idx  camera.cpp.0D10A27607F69491.idx  camera.h.0FD4B760469AC5AC.idx  common.hpp.9A11F20773DCF052.idx  compute_common.hpp.44D3B33F0E252655.idx  compute_vector_decl.hpp.D1041A8593CD82AA.idx  compute_vector_relational.hpp.6527A5641853A8DE.idx  constants.hpp.E25BF0D69B30C22C.idx  constants.inl.9C4C48EA29CF5A5B.idx  epsilon.hpp.D213C33F2869B8B6.idx  epsilon.inl.E01B59249AEC110C.idx  exponential.hpp.C996628F11AFCFF7.idx  func_common.inl.74DB702BC28BFD78.idx  func_exponential.inl.8DCC5E1175369580.idx  func_geometric.inl.283820A7EBE0E5E0.idx  func_matrix.inl.D9C52D8A5D9583F1.idx  func_trigonometric.inl.5B1AAB85E36B631E.idx  func_vector_relational.inl.EA429FFE08228D61.idx  geometric.hpp.C55ADBF7B28049C0.idx  glad.c.FA13ACA597BD3E6E.idx  glad.h.2D9B858758EC53C6.idx  glfw3.h.3B077F7C8B023AE3.idx  log.cpp.D0F564976F6DCEFD.idx  log.h.8BF02250737A00CB.idx  main.cpp.7BF13D85CB02A794.idx  mat2x2.hpp.0041A6EC63BD6D28.idx  mat2x3.hpp.725B26B82B9E61C6.idx  mat2x4.hpp.E7D9FC9486F7AA3D.idx  mat3x2.hpp.88C78780185B2CEF.idx  mat3x3.hpp.7D52C090C510931A.idx  mat3x4.hpp.2A606A6ADC5D451C.idx  mat4x2.hpp.64392801E5D5E869.idx  mat4x3.hpp.E6060ADDDFBF5782.idx  mat4x4.hpp.88E2C3A535EEAC12.idx  matrix.hpp.2774CE3DB2D7AD02.idx  matrix_clip_space.hpp.FABD8C4F7641909C.idx  matrix_clip_space.inl.63F683943206574A.idx  (+150 more)
lib/glad/: glad.c  glad.h
shaders/: fs.glsl  vs.glsl
src/: main.cpp
(+8 files in other folders)
